k8s/callee.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: callee-deployment
  labels:
    app: callee-depllyment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: callee-service
  template:
    metadata:
      labels:
        app: callee-service
    spec:
      containers:
        - name: callee-service
          image: sharplee7/callee-service:1.0
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: callee-service
  namespace: default
  labels:
    app: callee-service
spec:
  selector:
    app: callee-service
  ports:
    - protocol: TCP
      port: 8082
      nodePort: 30377
  type: NodePort
