k8s/caller.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caller-deployment
  labels:
    app: caller-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: caller-service
  template:
    metadata:
      labels:
        app: caller-service
    spec:
      containers:
        - name: caller-service
          image: sharplee7/caller-service:1.0
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: caller-service
  namespace: default
  labels:
    app: caller-service
spec:
  selector:
    app: caller-service
  ports:
    - protocol: TCP
      port: 8081
      nodePort: 30376
  type: NodePort

# env의 CALLER_SERVICE_URL같은 값은 application.properties에 있는 환경변수 처리한 변수
