k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: caller-callee-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: callee.sharplee7.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: callee-service
                port:
                  number: 8082
    - host: caller.sharplee7.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: caller-service
                port:
                  number: 8081

#여기서 등록한 host명은 dns에 등록해서 사용
